# gloo-portal-with-edge-demo

./: .gitignore  Makefile  README.md  ansible.cfg  cleanup.yml  flake.nix  playbook.yml  pyproject.toml  requirements.txt  requirements.yml  shell.nix
.direnv/: drv
kind/: cluster-1.yaml  cluster-2.yaml
manifests/app/: kustomization.yaml  petstore-v1-service.yaml  petstore-v2-service.yaml  petstore-v2.yaml
manifests/portal/: apidoc-v1-bookinfo.yaml  apidoc-v1-httpbin.yaml  apidoc-v1-pets.yaml  apiproduct-bookinfo.yaml  apiproduct-httpbin.yaml  apiproduct-petstore.yaml  dev-environment.yaml  group-users.yaml  kustomization.yaml  portal.yaml
roles/aws/defaults/: main.yml
roles/aws/files/cloudformation/: eks_cluster.yaml  eks_vpc.yaml
roles/aws/tasks/: eks_cluster.yml  eks_cluster_rollback.yml  main.yml
roles/aws/templates/: aws-auth-cm.yaml.j2  cluster-kubeconfig.yaml.j2
roles/civo/defaults/: main.yml
roles/civo/tasks/: k3s_create.yml  k3s_rollback.yml  main.yml
roles/gcp/defaults/: main.yml
roles/gcp/tasks/: main.yaml
roles/gcp/tasks/k8s/: gke_cluster.yml  gke_cluster_rollback.yml
roles/gcp/tasks/network/: vpc.yml  vpc_rollback.yml
roles/gcp/templates/: cluster-kubeconfig.yaml.j2
roles/gloo/tasks/: main.yml
roles/gloo/templates/: install_override_values.yaml.j2
roles/keycloak/defaults/: main.yml
roles/keycloak/files/keycloak/: deploy.yaml  (+1 more)
roles/keycloak/tasks/: main.yml
roles/petstore/defaults/: main.yml
roles/petstore/tasks/: main.yml
roles/portal/defaults/: main.yml
roles/portal/tasks/: main.yml
templates/: vars.yml.example
(+17 files in other folders)
